--- a/css/styles.css
+++ b/css/styles.css
@@ -589,6 +589,8 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px
   /* outline: 2px solid tomato; */
 }
 
+/* modal */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -621,8 +623,10 @@ transform: translate(-50%, -50%) scale(0.8);
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
+  box-sizing: border-box;
+
   min-width: 408px;
-  min-height: 576px;
+  /* min-height: 576px; */
   border-radius: 4px;
   background-color: #ffffff;
 
@@ -674,6 +678,8 @@ fill: currentColor;
 .form {
   width: 408px;
   padding: 72px 24px 24px 24px;
+
+    box-sizing: border-box;
 }
 
 .form-field,
@@ -683,13 +689,35 @@ display: flex;
 flex-direction: column;
 }
 
+.form-field input {
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.2);
+  border-radius: 4px;
+}
+
+/* .input:hover {
+  border: 1px solid tomato;
+} */
+
+.comment textarea {
+    border: 1px solid rgba(46, 47, 66, 0.2);
+    border-radius: 4px;
+}
+
+.comment textarea {
+  resize: none;
+}
+
+.b-wrap {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+
 
 .form-title {
   display: block;
   font-weight: 500;
-  margin-bottom: 16px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .comment {
@@ -713,6 +741,7 @@ flex-direction: column;
 .comment textarea::placeholder
 {
   color: rgba(46, 47, 66, 0.4);
+      /* margin-left: 16px; */
 }
 
 .checkbox a {
@@ -728,4 +757,12 @@ flex-direction: column;
   padding: 8px 16px;
   border: 1px solid #2E2F42;
   border-radius: 4px;
+}
+
+.form-field:focus-within input,
+.form-field input:checked,
+.comment:focus-within textarea,
+.comment textarea:checked {
+  outline: transparent;
+  border: 1px solid var(--button-text-color);
 }
