--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,68 @@ color: #404bbf;
   margin-left: 120px;
 }
 
+.subscribe-container {
+  width: 453px;
+  margin-left: auto;
+}
+
+.form-wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 16px;
+}
+
+.subscribe-container input {
+  box-sizing: border-box;
+  width: 264px;
+background-color: transparent;
+padding: 8px 16px;
+border: 1px solid #FFFFFF;
+border-radius: 4px;
+color: #FFFFFF;
+}
+
+.subscribe-container input::placeholder {
+  color: #FFFFFF;
+  font-size: 12px;
+}
+
+.submit-button {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 8px 24px;
+  min-width: 165px;
+  border-radius: 4px;
+  margin: 0 auto;
+    
+  color: #FFFFFF;
+  background-color: var(--button-text-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+    
+  transition: background-color var(--time-and-cubic);
+    
+    }
+
+  .submit-icon {
+    fill: #ffffff;
+    margin-left: 16px;
+  }
+    
+  .submit-button:hover,
+  .submit-button:focus {
+      background-color: #404BBF;
+    }
+
+/* social media */
+
 
 .media-header {
   font-weight: 500;
@@ -702,6 +764,7 @@ flex-direction: column;
 .comment textarea {
     border: 1px solid rgba(46, 47, 66, 0.2);
     border-radius: 4px;
+    height: 120px;
 }
 
 .comment textarea {
